--- a/src/app/pages/class/components/class/class.component.html
+++ b/src/app/pages/class/components/class/class.component.html
@@ -5,7 +5,7 @@
 <div class="header-btn">
   <ng-container *ngIf="(class$ | async) as class">
     <button nz-button class="add-btn primary" (click)="create()">Thêm mới</button>
-    <button nz-button class="add-btn primary" (click)="delete()">Xóa</button>
+    <button nz-button class="add-btn" (click)="delete()">Xóa</button>
 
 
     <app-table
