--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -33,7 +33,7 @@
             Email
           </span>
           <input
-            nz-input autofocus formControlName="email"
+            nz-input formControlName="email"
             [nzStatus]="(this.orgForm.get('email')?.invalid && (orgForm.get('email')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
@@ -48,7 +48,7 @@
             Số điện thoại
           </span>
           <input
-            nz-input autofocus formControlName="mobile"
+            nz-input formControlName="mobile"
             [nzStatus]="(this.orgForm.get('mobile')?.invalid && (orgForm.get('mobile')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
@@ -60,17 +60,16 @@
 
         <div nz-col [nzSpan]="9">
           <span class="text-label">
-            Tên miền trang quản trị
+            Người đại diện
           </span>
-          <input
-            nz-input autofocus formControlName="websiteCms"
-            [nzStatus]="(this.orgForm.get('websiteCms')?.invalid && (orgForm.get('websiteCms')?.touched || isSubmit)) ? 'error' : ''">
 
-          <span class="text-danger"
-                *ngIf="(orgForm.get('websiteCms')?.touched || isSubmit)  && orgForm.get('websiteCms')?.hasError('required')"
-          >
-            Tên miền trang quản trị không được để trống
-          </span>
+          <div>
+            <nz-select class="width-100" formControlName="userId">
+              <nz-option *ngFor="let user of listDirectors"
+                         [nzValue]="user.id" [nzLabel]="user.fullName"
+              ></nz-option>
+            </nz-select>
+          </div>
         </div>
 
         <div nz-col [nzSpan]="9">
@@ -97,16 +96,18 @@
 
           <div *ngIf="!isCreate">
             <span class="text-label">
-            Người đại diện
-          </span>
+              Tên miền trang quản trị
+            </span>
 
-            <div>
-              <nz-select class="width-100" formControlName="userId">
-                <nz-option *ngFor="let user of listDirectors"
-                           [nzValue]="user.id" [nzLabel]="user.fullName"
-                ></nz-option>
-              </nz-select>
-            </div>
+            <input
+              nz-input formControlName="websiteCms"
+              [nzStatus]="(this.orgForm.get('websiteCms')?.invalid && (orgForm.get('websiteCms')?.touched || isSubmit)) ? 'error' : ''">
+
+            <span class="text-danger"
+                  *ngIf="(orgForm.get('websiteCms')?.touched || isSubmit)  && orgForm.get('websiteCms')?.hasError('required')"
+            >
+              Tên miền trang quản trị không được để trống
+            </span>
           </div>
         </div>
 
@@ -116,11 +117,28 @@
           </span>
 
           <div class="select-file">
-            <div class="btn-select-file" (click)="selectFile('logo')" *ngIf="orgForm.get('logo')?.value === ''">
+            <div class="btn-select-file" (click)="selectFile('logo')" *ngIf="!orgForm.get('logo')?.value">
               <span nz-icon nzType="plus" nzTheme="outline"></span>
               <div style="margin-top: 8px;">Upload</div>
             </div>
-            <img class="img-preview" [src]="orgForm.get('logo')?.value" *ngIf="orgForm.get('logo')?.value !== ''">
+            <img class="img-preview" [src]="orgForm.get('logo')?.value" *ngIf="orgForm.get('logo')?.value">
+
+            <div class="overlay" *ngIf="orgForm.get('logo')?.value">
+              <div class="btn-file">
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Upload ảnh mới"
+                  (click)="selectFile('logo')">
+                  <span nz-icon nzType="upload"></span>
+                </a>
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Xóa"
+                  (click)="deleteImg('logo')">
+                  <span nz-icon nzType="delete"></span>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -130,11 +148,29 @@
           </span>
 
           <div class="select-file">
-            <div class="btn-select-file" (click)="selectFile('logo1x1')" *ngIf="orgForm.get('logo1x1')?.value === ''">
+            <div class="btn-select-file" (click)="selectFile('logo1x1')" *ngIf="!orgForm.get('logo1x1')?.value">
               <span nz-icon nzType="plus" nzTheme="outline"></span>
               <div style="margin-top: 8px;">Upload</div>
             </div>
-            <img class="img-preview" [src]="orgForm.get('logo1x1')?.value" *ngIf="orgForm.get('logo1x1')?.value !== ''">
+            <img class="img-preview" [src]="orgForm.get('logo1x1')?.value" *ngIf="orgForm.get('logo1x1')?.value">
+
+            <div class="overlay" *ngIf="orgForm.get('logo1x1')?.value">
+              <div class="btn-file">
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Upload ảnh mới"
+                  (click)="selectFile('logo1x1')">
+                  <span nz-icon nzType="upload"></span>
+                </a>
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Xóa"
+                  (click)="deleteImg('logo1x1')">
+                  <span nz-icon nzType="delete"></span>
+                </a>
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -144,55 +180,105 @@
           </span>
 
           <div class="select-file">
-            <div class="btn-select-file" (click)="selectFile('favicon')" *ngIf="orgForm.get('favicon')?.value === ''">
+            <div class="btn-select-file" (click)="selectFile('favicon')" *ngIf="!orgForm.get('favicon')?.value">
               <span nz-icon nzType="plus" nzTheme="outline"></span>
               <div style="margin-top: 8px;">Upload</div>
             </div>
-            <img class="img-preview" [src]="orgForm.get('favicon')?.value" *ngIf="orgForm.get('favicon')?.value !== ''">
+            <img class="img-preview" [src]="orgForm.get('favicon')?.value" *ngIf="orgForm.get('favicon')?.value">
+
+            <div class="overlay" *ngIf="orgForm.get('favicon')?.value">
+              <div class="btn-file">
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Upload ảnh mới"
+                  (click)="selectFile('favicon')">
+                  <span nz-icon nzType="upload"></span>
+                </a>
+                <a
+                  nz-button nzType="link"
+                  nz-tooltip nzTooltipTitle="Xóa"
+                  (click)="deleteImg('favicon')">
+                  <span nz-icon nzType="delete"></span>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div nz-col [nzSpan]="18">
+        <div nz-col [nzSpan]="9" >
           <span class="text-label">
             Tên miền trang chủ
           </span>
 
-          <span class="input-website">
-            <input
-              #inputWebsite
-              nz-input
-              [class.inactive]="!isActive"
-              [(ngModel)]="webData"
-              [ngModelOptions]="{standalone: true}"
-            >
-            <button nz-button nzType="primary" [nzSize]="'small'" nzShape="circle" class="size-custom" (click)="changeActive()">
-              <span nz-icon nzType="plus" *ngIf="!isActive"></span>
-              <span nz-icon nzType="check" *ngIf="isActive"></span>
-            </button>
-          </span>
-
-
-
-          <div class="domain-list" [class.invalid]="this.orgForm.get('website')?.invalid && isSubmit">
-            <div
-              class="domain-item"
-              *ngFor="let item of orgForm.get('website')?.value"
-            >
-              {{item}}
-              <button nz-button nzType="text" [nzSize]="'small'" nzShape="circle" class="size-custom" (click)="deleteWeb(item)">
-                <span nz-icon nzType="delete" class="color-dagger"></span>
-              </button>
-            </div>
-          </div>
+          <input
+            nz-input formControlName="website"
+            [nzStatus]="(orgForm.get('website')?.invalid &&
+                        (orgForm.get('website')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(orgForm.get('website')?.touched || isSubmit)  && orgForm.get('website')?.hasError('required')"
-          >
-            Tên miền không được để trống
+                *ngIf="(orgForm.get('website')?.touched || isSubmit)  &&
+                        orgForm.get('website')?.hasError('required')">
+                Tên miền trang chủ không được để trống
           </span>
-
         </div>
 
+        <div nz-col [nzSpan]="9" >
+          <span class="text-label">
+            Địa chỉ
+          </span>
+
+          <input nz-input formControlName="address">
+        </div>
+
+        <div nz-col [nzSpan]="18">
+          <span class="text-label">
+            Nhúng bản đồ
+          </span>
+          <textarea
+            nz-input formControlName="map"
+            [nzAutosize]="{ minRows: 3, maxRows: 6 }"
+          ></textarea>
+        </div>
+
+<!--        <div nz-col [nzSpan]="18">-->
+<!--          <span class="text-label">-->
+<!--            Tên miền trang chủ-->
+<!--          </span>-->
+
+<!--          <span class="input-website">-->
+<!--            <input-->
+<!--              #inputWebsite-->
+<!--              nz-input-->
+<!--              [class.inactive]="!isActive"-->
+<!--              [(ngModel)]="webData"-->
+<!--              [ngModelOptions]="{standalone: true}"-->
+<!--            >-->
+<!--            <button nz-button nzType="primary" [nzSize]="'small'" nzShape="circle" class="size-custom" (click)="changeActive()">-->
+<!--              <span nz-icon nzType="plus" *ngIf="!isActive"></span>-->
+<!--              <span nz-icon nzType="check" *ngIf="isActive"></span>-->
+<!--            </button>-->
+<!--          </span>-->
+
+
+
+<!--          <div class="domain-list" [class.invalid]="this.orgForm.get('website')?.invalid && isSubmit">-->
+<!--            <div-->
+<!--              class="domain-item"-->
+<!--              *ngFor="let item of orgForm.get('website')?.value"-->
+<!--            >-->
+<!--              {{item}}-->
+<!--              <button nz-button nzType="text" [nzSize]="'small'" nzShape="circle" class="size-custom" (click)="deleteWeb(item)">-->
+<!--                <span nz-icon nzType="delete" class="color-dagger"></span>-->
+<!--              </button>-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          <span class="text-danger"-->
+<!--                *ngIf="(orgForm.get('website')?.touched || isSubmit)  && orgForm.get('website')?.hasError('required')"-->
+<!--          >-->
+<!--            Tên miền không được để trống-->
+<!--          </span>-->
+<!--        </div>-->
 
       </div>
     </form>
