--- a/src/app/pages/organization/components/create-organization/create-organization.component.scss
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.scss
@@ -126,3 +126,34 @@
   top: 0;
   left: 0;
 }
+
+
+.overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #00000080;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  display: flex;
+  transition: all .3s;
+  &:hover{
+    opacity: 1;
+    .btn-file{
+      display: block;
+    }
+  }
+  .btn-file{
+    display: none;
+    a{
+      color: #ffffffd9;
+      transition: all .3s;
+      &:hover{
+        color: #fff;
+      }
+    }
+  }
+}
