tạo chức năng thêm và chỉnh sửa khoá học elearning

--- a/src/app/pages/e-learning-course/components/course-list/course-list.component.html
+++ b/src/app/pages/e-learning-course/components/course-list/course-list.component.html
@@ -22,7 +22,8 @@
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Tên khóa học" key="title" [width]="'200px'"></table-column>
       <table-column header="Mã khoá học" key="title" [width]="'200px'"></table-column>
-      <table-column header="Giá bán" key="title" [width]="'200px'"></table-column>
+      <table-column header="Giá bán" key="title" [width]="'200px'">
+      </table-column>
       <table-column header="Loại khóa học" key="title" [width]="'200px'"></table-column>
       <table-column header="Danh mục" key="title" [width]="'200px'"></table-column>
       <table-column header="Điểm đăng ký" key="title" [width]="'200px'"></table-column>
