--- a/src/app/shared/components/card-image/card-image.component.html
+++ b/src/app/shared/components/card-image/card-image.component.html
@@ -6,7 +6,7 @@
 <!--</ng-template>-->
 
 <div class="card-file">
-  <img style="width: 150px" [src]="dataImg.filePath"/>
+  <img [src]="dataImg.filePath"/>
   <div class="text-card-file">
     <div class="file-name">{{dataImg.fileName}}</div>
     <p class="file-detail">
