--- a/src/app/shared/components/card-image/card-image.component.scss
+++ b/src/app/shared/components/card-image/card-image.component.scss
@@ -12,12 +12,12 @@
     }
   }
   img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
