--- a/src/app/pages/referral/components/loyalty-list/loyalty-list.component.html
+++ b/src/app/pages/referral/components/loyalty-list/loyalty-list.component.html
@@ -20,8 +20,8 @@
       <table-column header="Tên chương trình" key="loyaltyName" [width]="'200px'"></table-column>
       <table-column header="Ngày bắt đầu" key="dateStart" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Ngày kết thúc" key="dateEnd" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
-      <table-column header="Tên tổ chức" key="roleName" [width]="'200px'"></table-column>
-      <table-column header="Tên diễn giả" key="roleName" [width]="'200px'"></table-column>
+      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Tên diễn giả" key="speakerName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
