--- a/src/app/pages/landing-page/components/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/components/landing-page/landing-page.component.scss
@@ -42,3 +42,12 @@
 ::ng-deep .custom-icon{
   font-size: 18px;
 }
+
+.url-landing-page{
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
