thêm hiển thị cột video học thử

--- a/src/app/pages/e-learning-course/components/video/create-video/create-video.component.html
+++ b/src/app/pages/e-learning-course/components/video/create-video/create-video.component.html
@@ -40,9 +40,15 @@
           </span>
         </div>
 
-        <div nz-col [nzSpan]="8">
+        <div nz-col [nzSpan]="4">
           <div class="text-label">Trạng thái</div>
           <nz-switch formControlName="status">
+          </nz-switch>
+        </div>
+
+        <div nz-col [nzSpan]="4">
+          <div class="text-label">Video học thử</div>
+          <nz-switch formControlName="isFreeWatch">
           </nz-switch>
         </div>
 
