--- a/src/app/pages/e-learning-course/components/video/video-list/video-list.component.scss
+++ b/src/app/pages/e-learning-course/components/video/video-list/video-list.component.scss
@@ -49,6 +49,18 @@
   color: #ff4d4f;
 }
 
+.icon-check-success {
+  padding: 1px 3px;
+  border-radius: 50%;
+  border: 1px solid #52c41a;
+}
+
+.icon-check-error {
+  padding: 1px 3px;;
+  border-radius: 50%;
+  border: 1px solid #ff4d4f;
+}
+
 .filter-form{
   margin-bottom: 15px;
   width: 10%;
