--- a/src/app/layouts/auth-layout/auth/auth.component.scss
+++ b/src/app/layouts/auth-layout/auth/auth.component.scss
@@ -20,6 +20,11 @@
   height: 100vh;
 }
 
+.title-web{
+  color: white;
+  word-break: break-word;
+}
+
 .container{
   background-color: #fff;
   border-radius: 30px;
