fix : update course

--- a/src/app/pages/student/components/upgrade-course/upgrade-course.component.html
+++ b/src/app/pages/student/components/upgrade-course/upgrade-course.component.html
@@ -84,18 +84,18 @@
         </div>
       </div>
 
-      <div nz-col [nzSpan]="12">
-        <span>
-          Trạng thái
-        </span>
+<!--      <div nz-col [nzSpan]="12">-->
+<!--        <span>-->
+<!--          Trạng thái-->
+<!--        </span>-->
 
-        <div>
-          <nz-select class="with-100" formControlName="isPay">
-            <nz-option [nzValue]="2" nzLabel="Thanh toán một phần"></nz-option>
-            <nz-option [nzValue]="1" nzLabel="Đã thanh toán"></nz-option>
-          </nz-select>
-        </div>
-      </div>
+<!--        <div>-->
+<!--          <nz-select class="with-100" formControlName="isPay">-->
+<!--            <nz-option [nzValue]="2" nzLabel="Thanh toán một phần"></nz-option>-->
+<!--            <nz-option [nzValue]="1" nzLabel="Đã thanh toán"></nz-option>-->
+<!--          </nz-select>-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div nz-col [nzSpan]="24">
         <span>Upload ảnh ủy nhiệm chi</span>
