--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -86,8 +86,10 @@
         </ng-template>
 
         <ng-template appCell let-data>
-          <span class="custom-action" (click)="detail(data)">Chi tiết</span>
-
+          <span class="custom-action" (click)="detail(data)"
+                nz-tooltip nzTooltipTitle="Chi tiết">
+            <span nz-icon nzType="user" nzTheme="outline" class="custom-icon"></span>
+          </span>
         </ng-template>
       </table-column>
     </app-table>
