--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
@@ -82,7 +82,7 @@
           <span *ngIf="data.area === 3">Miền Nam</span>
         </ng-template>
       </table-column>
-      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="Người giới thiệu" key="emailRef" [width]="'180px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
