--- a/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
@@ -28,8 +28,8 @@
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'180px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.isAccount">Kích hoạt</span>
-          <span class="text-invalid" *ngIf="!data.isAccount">Chưa kích hoạt</span>
+          <span class="text-valid" *ngIf="data.status">Kích hoạt</span>
+          <span class="text-invalid" *ngIf="!data.status">Chưa kích hoạt</span>
         </ng-template>
       </table-column>
       <table-column [width]="'180px'" fixColumn="right" >
