--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -51,7 +51,7 @@
       <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
-      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="Người giới thiệu" key="emailRef" [width]="'180px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
